# shoji

./: .gitignore  BRIEF.md  README.md  TASK.md  TODO.md  grok-brainstorm.md  meson.build  questions-for-josh.md  questions.md
data/: style.css
hardware/: RMIO.md
research/: lyra-os-landscape.md  lyra-platform-tooling.md
software/: DEV-SETUP.md  DEV-WORKFLOW.md  STACK-DECISION.md  STACK.md
src/: main.c
ui/: DESIGN-SYSTEM.md  DEVICE-MOCKUP.md  DISPLAY-STRATEGY.md  EINK-DE-SHELL.md  SHELL.md  simulator.html
